<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/backgroundtrzy">

    <ImageView
        android:layout_width="367dp"
        android:layout_height="192dp"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:contentDescription="TODO"
        android:src="@drawable/kupidynlogodwa" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:inputType="text"
        android:minHeight="48dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/has_o"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/zaloguj"
        android:textColorHighlight="#03A9F4"
        android:textStyle="bold" />


    <CheckBox
        android:id="@+id/checkBoxShowPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poka_has_o"
        android:textColor="#000000"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/buttonForgot"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/zapomnia_em_has_o"
            android:textColor="#000000"
            android:textAllCaps="false"
            android:background="@android:color/transparent"
            android:textStyle="bold" />


        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/rejestracja"
            android:textColor="#000000"
            android:textAllCaps="false"
            android:background="@android:color/transparent"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/imagelogo" />

</LinearLayout>
