<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:background="@drawable/backgroundtrzy"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="375dp"
        android:layout_height="235dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/kupidynlogodwa" />

    <TextView
        android:id="@+id/textViewEnterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/wprowad_adress_e_mail"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/adress_e_mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="Wyślij"
        android:layout_marginTop="16dp"
        android:textStyle="bold" />

</LinearLayout>
